--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ragnar-B Personal Blog
 author:
-  name: "Ragnar-B"
-#  email: your-email@domain.com
+  name: Ragnar-B
+  email: your-email@domain.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
@@ -51,4 +51,4 @@ header_pages:
 
 # Set to `true` to show excerpts on the homepage.
 #
-# show_excerpts: false
+show_excerpts: true
